src/styles/admin-styles/admin.scss
@import "dashboard";
@import "products";
@import "charts";
@import "dashboardApp";

.adminContainer {
  @include grid(1fr 4fr, 2rem);
  height: calc(100vh - 4rem);
  background-color: rgb(247, 247, 247);
  > aside {
    width: 100%;
    background-color: white;
    padding: 1rem;
    z-index: 10;
    overflow-y: auto;
    &::-webkit-scrollbar {
      display: none;
    }

    > div {
      margin: 2rem 1rem;
      > h5 {
        @include heading(2px);
        opacity: 0.8;
        margin: 1rem 0;
      }
      > ul {
        @include flex(column, unset, unset, 0.5rem);
        list-style: none;
        > li {
          padding: 0.5rem 1rem;
          border-radius: 10px;
          a {
            color: rgba(0, 0, 0, 0.825);
            @include flex(row, unset);
          }
        }
      }
    }
  }
}

.table {
  border-collapse: collapse;
  width: 100%;
  th,
  td {
    padding: 8px;
    text-align: left;
    vertical-align: middle;
  }

  th {
    font-weight: bold;
    color: #0000009e;
    font-size: 1.1rem;
    font-weight: 400;
    padding: 2rem 1rem;
  }
  tbody {
    tr {
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.093);
    }
    td {
      padding: 1rem;
      img {
        width: 4rem;
        height: 4rem;
        object-fit: scale-down;
        border-radius: 10px;
      }
      a {
        text-decoration: none;
        background-color: rgba(44, 104, 255, 0.455);
        color: rgba(44, 104, 255);
        padding: 0.25rem 0.5rem;
        border-radius: 10px;
      }
      button {
        width: 2rem;
        height: 2rem;
        font-size: 1.1rem;
        border: none;
        outline: none;
        background-color: transparent;
        cursor: pointer;
        color: rgb(255, 44, 44);
        &:hover {
          opacity: 0.6;
        }
      }
      &:first-child {
        border-left: none;
      }
      &:last-child {
        border-right: none;
      }
    }
  }
}

.tablePagination {
  @include flex;
  padding: 2rem;
  > button {
    padding: 0.5rem 1rem;
    border: none;
    outline: none;
    border-radius: 10px;
    cursor: pointer;
    background-color: rgba(0, 115, 255);
    color: white;
    &:disabled {
      background-color: rgba(0, 115, 255, 0.1);
      cursor: not-allowed;
    }
  }
}

.hamburger {
  display: grid;
  place-items: center;
  @include square(3rem);
  border: none;
  outline: none;
  cursor: pointer;
  color: rgba(44, 104, 255);
  position: fixed;
  top: 1rem;
  left: 1rem;
  font-size: 2rem;
  background-color: white;
  border-radius: 50%;
  z-index: 9;
}

.closeSidebar {
  width: 80%;
  margin: 1rem auto;
  display: block;
  padding: 0.75rem;
  border: none;
  outline: none;
  cursor: pointer;
  background-color: rgb(168, 2, 2);
  color: white;
  border-radius: 10px;
}

.loader {
  width: 100%;
  height: 100vh;
  @include flex;

  > div {
    @include square(10rem);
    border-radius: 50%;
    border-top: 1rem solid rgb(43, 43, 43);
    border-left: 1rem solid rgba(43, 43, 43);
    border-bottom: 1rem solid #fff;
    // border-right: 1rem solid #fff;
    animation: loadingAnimation 0.5s linear infinite;
  }
}

.skeleton-loader {
  display: flex;
  flex-direction: row;
  gap: 1rem;
}

.skeleton-shape {
  height: 30px;
  width: 100%;
  // margin-bottom: 10px;
  // border-radius: 4px;
  background-color: #ddd;
  padding: 1rem;
  animation: skeleton-loading 1.5s infinite;
}

@keyframes loadingAnimation {
  to {
    transform: rotateZ(360deg);
  }
}

@keyframes up-and-down {
  to {
    transform: translate(-50%, -20%);
  }
}

@keyframes skeleton-loading {
  0% {
    opacity: 0.4;
  }
  25% {
    opacity: 0.7;
  }
  50% {
    opacity: 1;
  }
  75% {
    opacity: 0.7;
  }
  100% {
    opacity: 0.4;
  }
}

